intel/bench_214_work/extr_.linuxdriversgpudrmmediatekmtk_drm_ddp.c_mtk_ddp_mout_en_with_main/log.txt
bench_214_work/extr_.linuxdriversgpudrmmediatekmtk_drm_ddp.c_mtk_ddp_mout_en_with_main/extr_.linuxdriversgpudrmmediatekmtk_drm_ddp.c_mtk_ddp_mout_en_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
1 error generated.
HLS FPGA Parse FAILED.
